[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deepspan"
dynamic = ["version"]
description = "Sequential pattern mining library that implements `deepspan`."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "bolu", email = "bolu@bolupi.me" },
]
dependencies = [
  "jax",
  "flax",
  "optax",
]

[project.urls]
Documentation = "https://github.com/unknown/worklog#readme"
Issues = "https://github.com/unknown/worklog/issues"
Source = "https://github.com/unknown/worklog"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
packages = ["src/deepspan"]

[tool.hatch.envs.experiments]
dependencies = [
  "pandas",
  "tqdm"
]
